--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
+    "eslint-config-khanne-react": "^0.0.6",
     "eslint-config-next": "14.1.3",
     "typescript": "^5"
   }
