--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8",
     "eslint-config-khanne-react": "^0.0.6",
     "eslint-config-next": "14.1.3",
